--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+
 <head>
-   <title>Employee Page</title>
+    <title>Employee Page</title>
 </head>
+
 <body>
-   <h1>Employees</h1>
-   <% for (var i in employees) {%>
-       <p>Employee info: employee #<%=employees[i].employee_id%>, weekly hours worked: <%=employees[i].weekly_hours_worked%>, manager?: <%=employees[i].manager_access%>, password: <%=employees[i].password%><p>
-   <% } %>
+    <h1>Employees</h1>
+    <% for (var i in employees) {%>
+        <p>Employee info: employee #<%=employees[i].employee_id%>, weekly hours worked:
+        <%=employees[i].weekly_hours_worked%>, manager?: <%=employees[i].manager_access%>, password:
+        <%=employees[i].password%>
+        <p>
+        <button>View</button>
+        <button>Edit</button>
+        <button>Delete</button>
+    <% } %>
 </body>
