--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+
 <head>
-   <title>Menu and Inventory Page</title>
+    <title>Menu and Inventory Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-   <h1>Inventory</h1>
-   <% for (var i in inventory) {%>
-       <p>Name: <%=inventory[i].ingredient%>, amount: <%=inventory[i].amount%>, cost: <%=inventory[i].cost_per_amount%><p>
-   <% } %>
+    <h1>Inventory</h1>
+    <% for (var i in inventory) {%>
+        <div class="inventory-container">
+            <p>Name: <%=inventory[i].ingredient%>, amount: <%=inventory[i].amount%>, cost: <%=inventory[i].cost_per_amount%><p>
+            <button>View</button>
+            <button>Edit</button>
+            <button>Delete</button>
+        </div>
+    <% } %>
 </body>
