--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Inventory</h1>
+    
+    <h1> <a href="/manager/employees"> This is a link to employee page</a></h1>
     <% for (var i in inventory) {%>
         <div class="inventory-container">
             <p>Name: <%=inventory[i].ingredient%>, amount: <%=inventory[i].amount%>, cost: <%=inventory[i].cost_per_amount%><p>
