--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -4,6 +4,11 @@
 </head>
 <body>
    <h1>Orders</h1>
+   
+   <h1> <a href="/"> Home page</a></h1>
+   <h1> <a href="/manager/employees"> This is a link to employee page</a></h1>
+   <h1> <a href="/manager/reports"> This is a link to reports page</a></h1>
+   <h1> <a href="/manager/menu_inventory"> This is a link to reports page</a></h1>
    <% for (var i in orders) {%>
        <p>Order details: order number: <%=orders[i].order_number%>, date: <%=orders[i].date%>, time: <%=orders[i].time%>, tea type: <%=orders[i].tea_type%>, flavor: <%=orders[i].flavor%><p>
    <% } %>
