--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu and Inventory Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -11,11 +13,36 @@
     <h1> <a href="/"> Home page</a></h1>
     <h1> <a href="/manager/employees"> This is a link to employee page</a></h1>
     <h1> <a href="/manager/reports"> This is a link to reports page</a></h1>
-    <h1> <a href="/manager/menu_inventory"> This is a link to reports page</a></h1>
-    <% for (var i in inventory) {%>
-        <div class="inventory-container">
-            <p>Name: <%=inventory[i].ingredient%>, amount: <%=inventory[i].amount%>, cost: <%=inventory[i].cost_per_amount%><p>
-            <button>View</button>
+    <h1> <a href="/manager/menu_inventory"> This is a link to menu_inventory page</a></h1>
+    
+    <div class="inventory-container">
+        <% for (var i in inventory) {%>
+                <p>Name: <%=inventory[i].ingredient%>, amount: <%=inventory[i].amount%>, cost: <%=inventory[i].cost_per_amount%><p>
+                <button>View</button>
+                <button>Edit</button>
+                <button>Delete</button>
+        <% } %>
+    </div>
+
+    <% for (var i in menu_items) {%>
+        <div class="menu-item-container">
+            <p>Name: <%=menu_items[i].name%> Price: <%=menu_items[i].price%><p>
+            <button>Edit</button>
+            <button>Delete</button>
+        </div>
+    <% } %>
+
+    <% for (var i in addons) {%>
+        <div class="addon-item-container">
+            <p>Name: <%=addons[i].name%><p>
+            <button>Edit</button>
+            <button>Delete</button>
+        </div>
+    <% } %>
+
+    <% for (var i in flavors) {%>
+        <div class="addon-item-container">
+            <p>Name: <%=flavors[i].name%><p>
             <button>Edit</button>
             <button>Delete</button>
         </div>
