--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="css/index_style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .login-container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            border: 2px solid black; /* Black border with a thickness of 2px */
-        }
-        input {
-            width: 95%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-    </style>
 </head>
 <body>
     <header class="main-header">
