--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<%# This will be for displaying past orders%>
+<!-- This will be for displaying past orders -->
 
 <head>
     <title>Orders</title>
 </head>
 
 <body>
+    <header>
     <h1>Orders page</h1>
     <h1> <a href="/"> This is a link to home page</a></h1>
     <h1> <a href="/cashier"> This is a link to cashier page</a></h1>
     <h1> <a href="/cashier/orders"> This is a link to orders page</a></h1>
     <h1> <a href="/cashier/transactions"> This is a link to transactions page</a></h1>
+    </header>
+    
+
+    <div class = "wrapper class">
+        <div class= "menu items">
+
+        </div>
+        <div class = "Checkout Menu">
+
+        </div>
+    </div>
+
     <% for (var i in menu_items) {%>
         <p>Menu Item: <%=menu_items[i].name%>, price<%=menu_items[i].price%> </p>
     <% } %>
