--- a/views/css/cashier-style.css
+++ b/views/css/cashier-style.css
@@ -1,9 +1,18 @@
-.inventory-container {
-    grid-template-columns: 4;
-    gap: 10px;
-    border-color: black;
+*{
+    box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+header{
+    border: 2px solid #000;
+}
+
+footer{
+    border: 2px solid #000;
+}
 /*Dropdown button code from WE schools: https://www.w3schools.com/html/html_css.asp */
 .dropbtn {
     background-color: #04AA6D;
@@ -47,15 +56,17 @@
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
-
-  body{
-    font-family: Arial, Helvetica, sans-serif;
+  .wrapper-class{
+    display: grid;
+    grid-template-columns: 4fr 1fr;
   }
 
   .menu-items{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    justify-content: center;
+    padding: 10px ;
   }
 
   .menu-item-button{
@@ -108,4 +119,22 @@
     border: 1px solid #000;
     padding: 10px;
     min-height: 200px;
+    position: relative;
+}
+
+.checkout-items{
+    display: block;
+}
+
+.checkout-button{
+    display: block;
+    width: 100%;
+    padding: 5px;
+    background: lightgrey;
+    border: 1px solid #000;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-radius: 20px;
 }
