--- a/views/css/style.css
+++ b/views/css/style.css
@@ -89,7 +89,7 @@ button {
     gap: 100px;
     justify-content: center;
     margin-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 50px
 }
 
 .graph-area {
