--- a/views/cashier_order_page.ejs
+++ b/views/cashier_order_page.ejs
@@ -4,7 +4,7 @@
     <title>Cashier Order Page</title>
     <link rel="stylesheet" href="css/cashier-style.css">
 </head>
-<script src="../cashier.js"></script>
+<script src="../cashier-logic.js"></script>
 <body>
     <header>
     <h1>Orders</h1>
@@ -25,7 +25,7 @@
     <div class = "wrapper-class">
         <div class= "menu-items">
             <% for (var i in menu_items) {%>
-                <button class = "menu-item-button" id = "'<%=menu_items[i].name%>'">
+                <button class = "menu-item-button" id = "'<%=menu_items[i].name%>'" onclick="openPopup()">
                     <img>
                     <h4>Name: <%=menu_items[i].name%></h4>
                     <h6>Price: <%=menu_items[i].price%></h6>
