got modify and add windows for inventory and menu items

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -71,6 +71,22 @@ header a {
     padding-bottom: 15px;
 }
 
+.add-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    min-width: 500px;
+    width: 50%;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 button {
     cursor: pointer;
     border-radius: 5px;
@@ -122,10 +138,14 @@ button {
     display: none;
 }
 
+#addon-forms {
+    display: none;
+}
+
 label {
     display: block;
 }
 
-.modify-window-button {
+.modify-window button {
     display: block;
 }
